# batrs

./: .cursorignore  .gitignore  AGENT.md  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  mkdocs.yml  skills-lock.json
.agentic-config/: INSTALL.md  USAGE.md  install-plan.json  install.ps1  install.sh  manifest.json  post-install-review-greenfield.md  post-install-review-integration.md  post-install-review-update.md
.agents/rules/: adr-discipline.md  api-design-basics.md  code-format.md  current-state.md  dependency-boundaries.md  documentation.md  domain-language.md  functional-programming.md  headroom-consultation.md  logging-practices.md  result-handling.md  runtime-handoff.md  rust-api-semver.md  rust-dependency-hygiene.md  rust-error-handling.md  rust-observability.md  rust-testing-strategy.md  rust-workflow-gates.md  testing.md  vertical-slice-boundaries.md  warning-hygiene.md
.cursor/: mcp.json
.cursor/rules/: api-design-basics.mdc  apply-agentmd.mdc  code-format.mdc  commit.mdc  decision-making.mdc  dependency-boundaries.mdc  documentation-maintenance.mdc  functional-programming.mdc  logging-practices.mdc  no-bundle-external-data.mdc  ratatui-style.mdc  result-handling.mdc  role.mdc  rust-api-semver.mdc  rust-code-style.mdc  rust-dead-code.mdc  rust-dependency-hygiene.mdc  rust-error-handling.mdc  rust-observability.mdc  rust-testing-strategy.mdc  rust-workflow-gates.mdc  signature.mdc  snake-case.mdc  testing.mdc  tinyfugue-implementation-tracking.mdc  tinyfugue-scripts.mdc  warning-hygiene.mdc  workflow-gates.mdc
.kbce-ri/: state.json
.pi/: settings.json
docs/: agent-commands.md  index.md
docs/agents/: issue-tracker.md
docs/guilds/: aelena.md  animist.md  barbarian.md  channellers.md  civmage.md  curate.md  disciple.md  folklorist.md  index.md  inner_circle.md  kharim.md  liberator.md  mage.md  mage_acid.md  mage_asphyxiation.md  mage_cold.md  mage_electricity.md  mage_fire.md  mage_magical.md  mage_poison.md  monk.md  nergal.md  psionicist.md  ranger.md  reaver.md  riftwalker.md  sabres.md  seminary.md  spider.md  tiger.md  triad.md  tzarakk.md
docs/manual/: commands.md  player-settings.md  ui.md
docs/wiki/: index.md  log.md  path-map.json  schema.md
scripts/: serve-manual.sh  wiki-lint.mjs
src/: ansi_codes.rs  ansi_colors.rs  ansi_text.rs  app.rs  automation.rs  combat_awareness.rs  config.rs  main.rs  message.rs  mud.rs  player_profile.rs  secondary_status.rs  stats.rs  update.rs  view.rs
src/abilities/: catalog.rs  floating_disc.rs  mod.rs
src/ansi/: ansi_codes.rs  ansi_colors.rs  ansi_text.rs  mod.rs  styled_line.rs  styled_text_block.rs  text_style.rs
src/app/: combat_scan.rs  mod.rs  (+9 more)
tf/: done_animist.tf  done_barbarian.tf  done_civmage.tf  done_curate.tf  done_sabres.tf  done_sects.tf  done_spider.tf  guild_urls.csv  loads.tf
(+190 files in other folders)
