[package]
name = "batrs"
version = "0.1.0"
edition = "2021"
authors = ["Olli Aalto <oaalto@gmail.com>"]

[dependencies]
libmudtelnet = "2.0.1"
bytes = "1.8"
http = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.9"
httpdate = "1.0"
once_cell = "1.21.3"
rand = "0.8"
parse-ansi = "0.1.6"
lazy_static = "1.5.0"
regex = "1.11"
num = "0.4.3"
num-derive = "0.4"
num-traits = "0.2"
egui = "0.32.0"
egui_extras = "0.32.0"
eframe = { version = "0.32.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.40", features = ["full", "tracing"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"] }
futures-channel = "0.3"
chrono = "0.4"
unicode-segmentation = "1.12"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
