[package]
name = "batrs"
version = "0.1.0"
edition = "2024"
authors = ["Olli Aalto <oaalto@gmail.com>"]

[dependencies]
libmudtelnet = "2.0"
bytes = "1.11"
parse-ansi = "0.1"
lazy_static = "1.5"
regex = "1.12"
num-derive = "0.4"
num-traits = "0.2"
ratatui = "0.29"
crossterm = "0.29"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.49", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"] }
chrono = "0.4"
unicode-segmentation = "1.12"
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
